# vision_opencv

./: .gitignore  .travis.sh  .travis.yml  CMakeLists.txt  LICENSE  README.md  README.rst  rosdep.yaml  setup.py  stack.xml
.github/workflows/: ci.yml  lint.yml
cv_bridge/: CHANGELOG.rst  CMakeLists.txt  CMakeLists.txt.orig  README.md  conf.py  mainpage.dox  manifest.xml  package.xml  rosdoc.yaml  setup.cfg  setup.py
cv_bridge/cmake/: cv_bridge-extras.cmake.in
cv_bridge/doc/: conf.py
cv_bridge/include/cv_bridge/: CvBridge.h  cv_bridge.h  cv_bridge.hpp  cv_mat_sensor_msgs_image_type_adapter.hpp  module.hpp  pycompat.hpp  rgb_colors.h  rgb_colors.hpp  visibility_control.h
cv_bridge/python/: CMakeLists.txt
cv_bridge/python/cv_bridge/: __init__.py  core.py  cv_bridge.py
cv_bridge/src/: CMakeLists.txt  CMakeLists.txt.orig  cv_bridge.cpp  cv_mat_sensor_msgs_image_type_adapter.cpp  module.cpp  module.hpp  module_opencv.cpp  module_opencv2.cpp  module_opencv3.cpp  module_opencv4.cpp  ndarray_converter.cpp  ndarray_converter.hpp  pycompat.hpp  rgb_colors.cpp
cv_bridge/src/cv_bridge/: cv_bridge.py
cv_bridge/test/: CMakeLists.txt  conversions.py  enumerants.py  python_bindings.py  test_compression.cpp  test_dynamic_scaling.cpp  test_endian.cpp  test_rgb_colors.cpp  utest.cpp  utest2.cpp
cv_markers/: CMakeLists.txt  mainpage.dox  manifest.xml
cv_markers/nodes/: datamatrix.py
cv_markers/src/cv_markers/: refinecorners.py
cv_markers/test/: unit.py
image_geometry/: CHANGELOG.rst  CMakeLists.txt  conf.py  index.rst  manifest.xml  package.xml  ros2_image_geometry_migration_readme.md  rosdoc.yaml  setup.cfg  setup.py
image_geometry/doc/: conf.py
image_geometry/image_geometry/: __init__.py  cameramodels.py
image_geometry/include/image_geometry/: camera_model.h  exports.h  pinhole_camera_model.h  pinhole_camera_model.hpp  stereo_camera_model.h  stereo_camera_model.hpp  visibility_control.hpp
image_geometry/src/: CMakeLists.txt  camera_model.cpp  pinhole_camera_model.cpp  stereo_camera_model.cpp
image_geometry/src/image_geometry/: __init__.py  cameramodels.py
image_geometry/test/: CMakeLists.txt  directed.py  test_copyright.py  test_flake8.py  test_pep257.py  utest.cpp  utest_equi.cpp
image_view/: image_view.cpp
opencv2/: Makefile  cmake_2.4.7.patch  conf.py  cvbridge_python.rst  flann.patch  index.rst  mainpage.dox  manifest.xml  opencv2-python-link.patch  pythontest.patch  rosdoc.yaml
opencv2/src/opencv_latest/: cv_bridge.py
opencv_apps/: CHANGELOG.rst  CMakeLists.txt  nodelet_plugins.xml  package.xml
opencv_apps/cfg/: CamShift.cfg  ContourMoments.cfg  ConvexHull.cfg  EdgeDetection.cfg  FBackFlow.cfg  FaceDetection.cfg  FindContours.cfg  GeneralContours.cfg  GoodfeatureTrack.cfg  HoughCircles.cfg  HoughLines.cfg  LKFlow.cfg  PeopleDetect.cfg  PhaseCorr.cfg  SegmentObjects.cfg  SimpleFlow.cfg  WatershedSegmentation.cfg
opencv_apps/include/opencv_apps/: nodelet.h
opencv_apps/msg/: Circle.msg  CircleArray.msg  CircleArrayStamped.msg  Contour.msg  ContourArray.msg  ContourArrayStamped.msg  Face.msg  FaceArray.msg  FaceArrayStamped.msg  Flow.msg  FlowArray.msg  FlowArrayStamped.msg  FlowStamped.msg  Line.msg  LineArray.msg  LineArrayStamped.msg  Moment.msg  MomentArray.msg  MomentArrayStamped.msg  Point2D.msg  Point2DArrayStamped.msg  Point2DStamped.msg  Rect.msg  RectArray.msg  RectArrayStamped.msg  RotatedRect.msg  RotatedRectArray.msg  RotatedRectArrayStamped.msg  RotatedRectStamped.msg  Size.msg
opencv_apps/src/node/: camshift.cpp  contour_moments.cpp  convex_hull.cpp  edge_detection.cpp  face_detection.cpp  fback_flow.cpp  find_contours.cpp  general_contours.cpp  goodfeature_track.cpp  hough_circles.cpp  hough_lines.cpp  lk_flow.cpp  people_detect.cpp  phase_corr.cpp  segment_objects.cpp  simple_compressed_example.cpp  simple_example.cpp  simple_flow.cpp  watershed_segmentation.cpp
opencv_apps/src/nodelet/: camshift_nodelet.cpp  contour_moments_nodelet.cpp  convex_hull_nodelet.cpp  edge_detection_nodelet.cpp  face_detection_nodelet.cpp  fback_flow_nodelet.cpp  find_contours_nodelet.cpp  general_contours_nodelet.cpp  goodfeature_track_nodelet.cpp  hough_circles_nodelet.cpp  hough_lines_nodelet.cpp  lk_flow_nodelet.cpp  nodelet.cpp  people_detect_nodelet.cpp  phase_corr_nodelet.cpp  segment_objects_nodelet.cpp  simple_compressed_example_nodelet.cpp  simple_example_nodelet.cpp  simple_flow_nodelet.cpp  watershed_segmentation_nodelet.cpp
opencv_apps/test/: CMakeLists.txt  test-camshift.test  test-contour_moments.test  test-convex_hull.test  test-edge_detection.test  test-face_detection.test  test-fback_flow.test  test-find_contours.test  test-general_contours.test  test-goodfeature_track.test  test-hough_circles.test  test-hough_lines.test  test-lk_flow.test  test-people_detect.test  test-phase_corr.test  test-segment_objects.test  test-simple_flow.test  test-watershed_segmentation.test
opencv_latest/: Makefile  cvbridge_python.rst  mainpage.dox  manifest.xml  osx.patch
opencv_latest/include/opencv_latest/: CvBridge.h
opencv_latest/src/opencv_latest/: cv_bridge.py
opencv_tests/: CHANGELOG.rst  CMakeLists.txt  manifest.xml  package.xml  setup.cfg  setup.py
opencv_tests/launch/: pong.launch  view_img.py
opencv_tests/nodes/: bbc.py  broadcast.py  broadcast_compressed.py  rosfacedetect.py  rosfacedetect_compressed.py  source.py  source_compressed.py
opencv_tests/opencv_tests/: rosfacedetect.py  source.py
opencv_tests/scripts/: generate_converter.py
opencv_tests/test/: enumerants.py  utest.cpp  utest2.cpp
opencvpython/: Makefile  mainpage.dox  manifest.xml
vision_opencv/: CHANGELOG.rst  CMakeLists.txt  package.xml
