<package format="3">
  <name>cv_bridge</name>
  <version>1.13.0</version>
  <description>
    This contains CvBridge, which converts between ROS
    Image messages and OpenCV images.
  </description>
  <author>Patrick Mihelich</author>
  <author>James Bowman</author>
  <maintainer email="vincent.rabaud@gmail.com">Vincent Rabaud</maintainer>
  <license>BSD</license>
  <url type="website">http://www.ros.org/wiki/cv_bridge</url>
  <url type="repository">https://github.com/ros-perception/vision_opencv</url>
  <url type="bugtracker">https://github.com/ros-perception/vision_opencv/issues</url>

  <export>
    <rosdoc config="rosdoc.yaml" />
  </export>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>boost</build_depend>
  <build_depend>libopencv-dev</build_depend>
  <build_depend condition="$ROS_PYTHON_VERSION == 2">python</build_depend>
  <build_depend condition="$ROS_PYTHON_VERSION == 3">python3</build_depend>
  <build_depend condition="$ROS_PYTHON_VERSION == 2">python-opencv</build_depend>
  <build_depend condition="$ROS_PYTHON_VERSION == 3">python3-opencv</build_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <exec_depend>boost</exec_depend>
  <exec_depend>libopencv-dev</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-opencv</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-opencv</exec_depend>
  <exec_depend>rosconsole</exec_depend>
  <build_export_depend>libopencv-dev</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>

  <test_depend>rostest</test_depend>
  <test_depend condition="$ROS_PYTHON_VERSION == 2">python-numpy</test_depend>
  <test_depend condition="$ROS_PYTHON_VERSION == 3">python3-numpy</test_depend>

  <doc_depend>dvipng</doc_depend>
</package>
