<?xml version="1.0"?>
<package>
  <name>opencv_apps</name>
  <version>1.11.11</version>
  <description>The opencv_apps package, most of code is taken from https://github.com/Itseez/opencv/tree/master/samples/cpp</description>

  <maintainer email="kei.okada@gmail.com">Kei Okada</maintainer>
  <author email="kei.okada@gmail.com">Kei Okada</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cv_bridge</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_srvs</build_depend>

  <run_depend>cv_bridge</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_srvs</run_depend>

  <test_depend>rostest</test_depend>
  <test_depend>rosbag</test_depend>
  <test_depend>rosservice</test_depend>
  <test_depend>rostopic</test_depend>
  <test_depend>image_proc</test_depend>
  <test_depend>image_view</test_depend>
  <test_depend>topic_tools</test_depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml"/>
  </export>
</package>
